# traazza

./: .gitignore  README.md  pyproject.toml  selladoo-roadmap.md
docs/: especificacion-huella.md
src/traazza/: __init__.py  cli.py  cliente.py  envoltorio.py  errores.py  eventos.py  firma.py  huella.py  modelos.py  qr.py  validacion.py  xml.py
src/traazza/esquemas/: SuministroInformacion.xsd  SuministroLR.xsd
tests/: test_cli.py  test_cliente.py  test_envoltorio.py  test_eventos.py  test_firma.py  test_huella.py  test_qr.py  test_validacion.py  test_xml.py
tests/vectores/: README.md  xmldsig-core-schema.xsd
tests/vectores/_smoke/: registro_smoke.xsd
